@@ -1,3 +1,5 @@
+- add mandrake_release_info() function
+
 Version 10.4.138 -  21 June 2007, by Thierry Vignaud
 
 - add support for snd-cmi8788 driver
